Bug 1295019 - Suppress the APZ displayport while doing main-thread async scrolling. r=BenWa

MozReview-Commit-ID: 4xbotjcH3ZU